bad/2020-07-06/15-19/30.0/build.err
run.c:13:2: error: expected identifier or ‘(’ before ‘}’ token
  }
  ^